Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15660

parallel-scale-nfsv4 test_racer_on_nfs: statahead doesn't stop

XMLWordPrintable

    • 3
    • 9223372036854775807

      This issue was created by maloo for Yang Sheng <ys@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/c082c323-0510-49bd-98f5-bcd04c073100

      test_racer_on_nfs failed with the following error:

      ............
      [Tue Mar 15 01:19:39 2022] umount          D    0 55980  55979 0x00004080
      [Tue Mar 15 01:19:39 2022] Call Trace:
      [Tue Mar 15 01:19:39 2022]  __schedule+0x2c4/0x700
      [Tue Mar 15 01:19:39 2022]  schedule+0x38/0xa0
      [Tue Mar 15 01:19:39 2022]  schedule_timeout+0x193/0x2f0
      [Tue Mar 15 01:19:39 2022]  ? __next_timer_interrupt+0xf0/0xf0
      [Tue Mar 15 01:19:39 2022]  ll_kill_super+0x63/0x130 [lustre]
      [Tue Mar 15 01:19:39 2022]  lustre_kill_super+0x28/0x40 [lustre]
      [Tue Mar 15 01:19:39 2022]  deactivate_locked_super+0x34/0x70
      [Tue Mar 15 01:19:39 2022]  cleanup_mnt+0x3b/0x70
      [Tue Mar 15 01:19:39 2022]  task_work_run+0x8a/0xb0
      [Tue Mar 15 01:19:39 2022]  exit_to_usermode_loop+0xeb/0xf0
      [Tue Mar 15 01:19:39 2022]  do_syscall_64+0x198/0x1a0
      [Tue Mar 15 01:19:39 2022]  entry_SYSCALL_64_after_hwframe+0x65/0xca
      [Tue Mar 15 01:19:39 2022] RIP: 0033:0x7fd680bf7f5b
      [Tue Mar 15 01:19:39 2022] Code: Bad RIP value.
      [Tue Mar 15 01:19:39 2022] RSP: 002b:00007ffd07bf7bd8 EFLAGS: 00000202 ORIG_RAX: 00000000000000a6
      [Tue Mar 15 01:19:39 2022] RAX: 0000000000000000 RBX: 000055711ddf1400 RCX: 00007fd680bf7f5b
      [Tue Mar 15 01:19:39 2022] RDX: 0000000000000001 RSI: 0000000000000001 RDI: 000055711de013d0
      [Tue Mar 15 01:19:39 2022] RBP: 0000000000000001 R08: 000055711de00ce0 R09: 000055711ddee010
      [Tue Mar 15 01:19:39 2022] R10: 00007fd680eb8ba0 R11: 0000000000000202 R12: 000055711de013d0
      [Tue Mar 15 01:19:39 2022] R13: 00007fd6819a3184 R14: 000055711ddff020 R15: 00000000ffffffff
      
      ............
      
      [Tue Mar 15 01:19:39 2022] ll_sa_31092     I    0 40130      2 0x80004080
      [Tue Mar 15 01:19:39 2022] Call Trace:
      [Tue Mar 15 01:19:39 2022]  __schedule+0x2c4/0x700
      [Tue Mar 15 01:19:39 2022]  schedule+0x38/0xa0
      [Tue Mar 15 01:19:39 2022]  ll_statahead_thread+0x32c/0xc60 [lustre]
      [Tue Mar 15 01:19:39 2022]  ? start_statahead_thread+0x12f0/0x12f0 [lustre]
      [Tue Mar 15 01:19:39 2022]  kthread+0x112/0x130
      [Tue Mar 15 01:19:39 2022]  ? kthread_flush_work_fn+0x10/0x10
      [Tue Mar 15 01:19:39 2022]  ret_from_fork+0x35/0x40
      [Tue Mar 15 01:19:39 2022] ll_agl_31092    I    0 40131      2 0x80004080
      [Tue Mar 15 01:19:39 2022] Call Trace:
      [Tue Mar 15 01:19:39 2022]  __schedule+0x2c4/0x700
      [Tue Mar 15 01:19:39 2022]  ? ll_agl_trigger+0x4a0/0x4a0 [lustre]
      [Tue Mar 15 01:19:39 2022]  schedule+0x38/0xa0
      [Tue Mar 15 01:19:39 2022]  ll_agl_thread+0xf2/0x210 [lustre]
      [Tue Mar 15 01:19:39 2022]  kthread+0x112/0x130
      [Tue Mar 15 01:19:39 2022]  ? kthread_flush_work_fn+0x10/0x10
      [Tue Mar 15 01:19:39 2022]  ret_from_fork+0x35/0x40
      ...............
      
      

      The umount was blocked by statahead thread.

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      parallel-scale-nfsv4 test_racer_on_nfs -

            ys Yang Sheng
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: